Add version parameter
Added version parameter to cfp_common_v1 and encode
Also minor edits to the webpage

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,6 @@
                     </div>
                     <form id="parameters">
                         <input type="text" name="parameter" placeholder="potato"/>
-                        <div class="button">Submit</div>
                     </form>
                 </div>
                 <div class="row-item">
@@ -44,6 +43,7 @@
                     <form action="">
                         <input type="radio" name="vocab" value="super-restricted">Super restricted<br>
                         <input type="radio" name="match-critera" value="title">Full range of vocab
+                        <div class="button">Submit</div>
                     </form>
                 </div>
             </div>
@@ -62,8 +62,8 @@
                     <div class="descr">
                         Another random conference announcement
                     </div>
-                    <div class="text" id="latest">
-                        <textarea type="text" class="ref-text" readonly disabled></textarea>
+                    <div class="text">
+                        <textarea type="text" class="ref-text" readonly disabled id="latest"></textarea>
                         <div class="fadeout"></div>
                     </div>
                     <div class="descr">
