--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             <div class="col-sm-4">
                 <div class="row-item">
                     <div class="h2" id="tt">
-                        Type a message to encode
+                        Your secret message
                     </div>
                     <form id="parameters">
                         <form action="#">
@@ -65,11 +65,11 @@
                         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="super-restricted">
                             <input type="radio" id="super-restricted" class="mdl-radio__button" name="options" value="1" checked>
                             <span class="mdl-radio__label">Super restricted</span>
-                        </label>
+                        </label><br>
                         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="super-restricted">
                             <input type="radio" id="super-restricted" class="mdl-radio__button" name="options" value="1" checked>
                             <span class="mdl-radio__label">All the vocab</span>
-                        </label>
+                        </label><br>
                         <button class="submit mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                             Submit
                         </button>
@@ -82,21 +82,21 @@
                         Results
                     </div>
                     <div class="h3">
-                        Your original conference announcement:
+                        Your original ad
                     </div>
                     <div class="orig text">
                         <textarea type="text" class="ref-text" readonly disabled>{{random_text}}</textarea>
                         <div class="fadeout"></div>
                     </div>
                     <div class="h3">
-                        Another random conference announcement
+                        Another random ad
                     </div>
                     <div class="text">
                         <textarea type="text" class="ref-text" readonly disabled id="latest"></textarea>
                         <div class="fadeout"></div>
                     </div>
                     <div class="h3">
-                        Your high scores or whatever
+                        High scores!
                     </div>
                     <table class="mdl-data-table mdl-js-data-table">
                         <thead>
