Update original ad from editing secret message
Also start to add queue stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                         Your original ad
                     </div>
                     <div class="orig text">
-                        <textarea type="text" class="ref-text" readonly disabled>{{random_text}}</textarea>
+                        <textarea type="text" class="ref-text" id="orig-text" readonly disabled>{{random_text}}</textarea>
                         <div class="fadeout"></div>
                     </div>
                     <div class="h3">
