--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,9 +34,11 @@ body
 }
 .text
 {
-    padding: 5%;
+    padding: 5% 0 5% 5%;
+    border-right: solid 20px #e5e4e4;
     background-color: #e5e4e4;
     position: relative;
+    overflow: hidden;
 }
 .stuff
 {
@@ -55,17 +57,18 @@ body
 }
 .ref-text
 {
-    width: 100%;
+    width: calc(100% + 20px);
     height: 10em;
     background-color: transparent;
     resize: none;
     border: none;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: wrap;
 }
 .fadeout
 {
     height: 6em;
-    width: 90%;
+    width: 120%;
     position: absolute;
     bottom: 0;
     background: -webkit-linear-gradient(
