My code that may or may not work
Add function to append to table
Add function get_closest_match()

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,25 +98,17 @@
                     <div class="h3">
                         High scores!
                     </div>
-                    <table class="mdl-data-table mdl-js-data-table">
+                    <table class="mdl-data-table mdl-js-data-table" id="table">
                         <thead>
                             <tr>
-                                <th class="mdl-data-table__cell--non-numeric">Score</th>
-                                <th>Time (s)</th>
+                                <th class="mdl-data-table__cell--non-numeric">Time (s)</th>
+                                <th>Score</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="mdl-data-table__cell--non-numeric">Don Aubrey</td>
-                                <td>25</td>
-                            </tr>
-                            <tr>
-                                <td class="mdl-data-table__cell--non-numeric">Sophia Carson</td>
-                                <td>32</td>
-                            </tr>
-                            <tr>
-                                <td class="mdl-data-table__cell--non-numeric">Steve Moreno</td>
-                                <td>29</td>
+                                <td class="mdl-data-table__cell--non-numeric">0</td>
+                                <td>0</td>
                             </tr>
                         </tbody>
                     </table>
