--- a/templates/index.html
+++ b/templates/index.html
@@ -77,9 +77,11 @@
                             <div class="h3" id="monkey">
                                 Have the resident monkeys start typing.
                             </div>
-                            <button id="start-generation" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                            <label for="frequency">Generation frequency.</label>
+					        <input type="number" name="frequency" id="frequency"/>
+                            <div id="start-generation" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                                 Start generation.
-                            </button>
+                            </div>
                         </div>
                     </form>
                 </div>
