--- a/templates/index.html
+++ b/templates/index.html
@@ -77,10 +77,10 @@
                             <div class="h3" id="monkey">
                                 Have the resident monkeys start typing.
                             </div>
-                            <label for="frequency">Generation frequency.</label>
+                            <label for="frequency">Generation frequency (ms)</label>
 					        <input type="number" name="frequency" id="frequency"/>
                             <div id="start-generation" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                                Start generation.
+                                Start generation
                             </div>
                         </div>
                     </form>
