Update flavor text

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             OK Google, Pronounce YHWH
         </div>
         <div class="flavor">
-            You're the organizer of a leading conference in computer science, the H-sorted Copyleft Hallux Symposium. Anyway, you've written an email to send out to your fellow computer scientists to ask them to submit, but your computer caught on fire and you didn't back up your files. You don't remember much more than snippets of what you wrote, but you do know it was absolutely perfect, and you'll know it when you see it. <strong>Can you recover it from the void?</strong>
+            You're the organizer of a leading conference in computer science, the H-sorted Copyleft Hallux Symposium. Anyway, you've written an email to send out to your fellow scientists to ask them to submit. But just as you finished you dropped a candle and your computer caught on fire and burned to a crisp! <strong>Will you be able to recover your data?</strong>
         </div>
         <div class="row">
             <div class="col-sm-4">
@@ -55,7 +55,7 @@
                         </label>
                         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="match-sentence">
                             <input type="checkbox" id="match-sentence" class="mdl-checkbox__input" checked>
-                            <span class="mdl-checkbox__label">First sentence</span>
+                            <span class="mdl-checkbox__label">Conference name</span>
                         </label>
                     </form>
                     <div class="h3">
