--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>wow</title>
+    <title>Arcadia</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
@@ -46,7 +46,7 @@
                         Options
                     </div>
                     <div class="h3">
-                        What parts of the conference announcement do you want to match for?
+                        Match for:
                     </div>
                     <form action="">
                         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="match-title">
@@ -59,7 +59,7 @@
                         </label>
                     </form>
                     <div class="h3">
-                        How wide do you want the vocabulary to be?
+                        Vocabulary range:
                     </div>
                     <form action="">
                         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="super-restricted">
@@ -122,7 +122,6 @@
                             </tr>
                         </tbody>
                     </table>
-
                 </div>
             </div>
         </div>
